--- a/templates/user_management/change_password.html
+++ b/templates/user_management/change_password.html
@@ -111,7 +111,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 document.addEventListener('DOMContentLoaded', function() {
     // Focus on current password field
     const currentPasswordField = document.getElementById('current_password');
