--- a/templates/user_management/forgot_password.html
+++ b/templates/user_management/forgot_password.html
@@ -75,7 +75,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 document.addEventListener('DOMContentLoaded', function() {
     // Focus on email field
     const emailField = document.getElementById('email');
