--- a/templates/components/admin_job_details_modal.html
+++ b/templates/components/admin_job_details_modal.html
@@ -143,7 +143,7 @@
     </div>
 </div>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Global variables for job details modal
 let currentJobId = null;
 let currentJobData = null;
