--- a/templates/components/admin_navigation.html
+++ b/templates/components/admin_navigation.html
@@ -183,7 +183,7 @@
     </div>
 </div>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Update last updated timestamp
 function updateTimestamp() {
     document.getElementById('lastUpdated').textContent = new Date().toLocaleTimeString();
