--- a/templates/components/bulk_admin_actions_modal.html
+++ b/templates/components/bulk_admin_actions_modal.html
@@ -310,7 +310,7 @@
     </div>
 </div>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Global variables for bulk actions
 let selectedJobIds = [];
 let bulkActionInProgress = false;
