--- a/templates/components/caption_form_disabled.html
+++ b/templates/components/caption_form_disabled.html
@@ -123,7 +123,7 @@
 </div>
 
 <!-- Auto-refresh script -->
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 // Auto-refresh page every 2 minutes to check if storage limit is lifted
 let autoRefreshInterval;
 
