--- a/templates/components/viewer_navigation.html
+++ b/templates/components/viewer_navigation.html
@@ -287,7 +287,7 @@
 }
 </style>
 
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 function switchPlatform(platformId) {
     if (!platformId) return;
     
