--- a/templates/user_management/reset_password.html
+++ b/templates/user_management/reset_password.html
@@ -91,7 +91,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+<script nonce="{{ g.csp_nonce if g.csp_nonce else '' }}">
 document.addEventListener('DOMContentLoaded', function() {
     // Focus on password field
     const passwordField = document.getElementById('password');
