--- a/templates/user_management/reset_password.html
+++ b/templates/user_management/reset_password.html
@@ -71,7 +71,7 @@
                     <div class="text-center">
                         <p class="mb-0">
                             Remember your password? 
-                            <a href="{{ url_for('user_management.login') }}" class="text-decoration-none">
+                            <a href="{{ url_for('auth.user_management.login') }}" class="text-decoration-none">
                                 Sign in here
                             </a>
                         </p>
