--- a/templates/base.html
+++ b/templates/base.html
@@ -242,7 +242,7 @@
                                 {% endif %}
                                 
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{{ url_for('user_management.profile') }}">
+                                <li><a class="dropdown-item" href="{{ url_for('auth.user_management.profile') }}">
                                     <i class="bi bi-person-gear me-2"></i>Profile & Settings
                                 </a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('gdpr.privacy_policy') }}" target="_blank">
@@ -265,7 +265,7 @@
                     {% else %}
                         <!-- Anonymous user navigation - Login link in top-right corner -->
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('user_management.login') }}">
+                            <a class="nav-link" href="{{ url_for('auth.user_management.login') }}">
                                 <i class="bi bi-box-arrow-in-right me-1"></i>Login
                             </a>
                         </li>
