--- a/templates/components/viewer_navigation.html
+++ b/templates/components/viewer_navigation.html
@@ -64,13 +64,13 @@
         <h3 class="nav-section-title">Account</h3>
         <ul class="nav-list">
             <li class="nav-item">
-                <a href="{{ url_for('user_management.profile') }}" class="nav-link {{ 'active' if request.endpoint == 'user_management.profile' }}">
+                <a href="{{ url_for('auth.user_management.profile') }}" class="nav-link {{ 'active' if request.endpoint == 'auth.user_management.profile' }}">
                     <i class="icon-user" aria-hidden="true"></i>
                     <span>My Profile</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="{{ url_for('user_management.change_password') }}" class="nav-link {{ 'active' if request.endpoint == 'user_management.change_password' }}">
+                <a href="{{ url_for('auth.user_management.change_password') }}" class="nav-link {{ 'active' if request.endpoint == 'auth.user_management.change_password' }}">
                     <i class="icon-lock" aria-hidden="true"></i>
                     <span>Change Password</span>
                 </a>
