--- a/templates/errors/session_error.html
+++ b/templates/errors/session_error.html
@@ -38,7 +38,7 @@
                                         Quick Fix
                                     </h6>
                                     <p class="card-text">Log in again to restore your session and continue working.</p>
-                                    <a href="{{ url_for('user_management.login') }}" class="btn btn-primary">
+                                    <a href="{{ url_for('auth.user_management.login') }}" class="btn btn-primary">
                                         <i class="fas fa-sign-in-alt me-2"></i>
                                         Log In Again
                                     </a>
