--- a/templates/user_management/edit_profile.html
+++ b/templates/user_management/edit_profile.html
@@ -62,7 +62,7 @@
                         </div>
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <a href="{{ url_for('user_management.profile') }}" class="btn btn-secondary me-md-2">
+                            <a href="{{ url_for('auth.user_management.profile') }}" class="btn btn-secondary me-md-2">
                                 <i class="fas fa-times"></i> Cancel
                             </a>
                             {{ form.submit(class="btn btn-primary") }}
