--- a/templates/user_management/forgot_password.html
+++ b/templates/user_management/forgot_password.html
@@ -46,7 +46,7 @@
                     <div class="text-center">
                         <p class="mb-0">
                             Remember your password? 
-                            <a href="{{ url_for('user_management.login') }}" class="text-decoration-none">
+                            <a href="{{ url_for('auth.user_management.login') }}" class="text-decoration-none">
                                 Sign in here
                             </a>
                         </p>
@@ -55,7 +55,7 @@
                     <div class="text-center mt-2">
                         <p class="mb-0">
                             Don't have an account? 
-                            <a href="{{ url_for('user_management.register') }}" class="text-decoration-none">
+                            <a href="{{ url_for('auth.user_management.register') }}" class="text-decoration-none">
                                 Register here
                             </a>
                         </p>
