--- a/templates/user_management/login.html
+++ b/templates/user_management/login.html
@@ -72,13 +72,13 @@
                     <!-- Additional Links -->
                     <div class="text-center mt-4">
                         <p class="text-muted mb-2">
-                            <a href="{{ url_for('user_management.forgot_password') }}" class="text-decoration-none">
+                            <a href="{{ url_for('auth.user_management.forgot_password') }}" class="text-decoration-none">
                                 Forgot your password?
                             </a>
                         </p>
                         <p class="text-muted">
                             Don't have an account? 
-                            <a href="{{ url_for('user_management.register') }}" class="text-decoration-none">Sign up here</a>
+                            <a href="{{ url_for('auth.user_management.register') }}" class="text-decoration-none">Sign up here</a>
                         </p>
                         <p class="text-muted">
                             <a href="{{ url_for('main.landing') }}" class="text-decoration-none">
