--- a/templates/user_management/register.html
+++ b/templates/user_management/register.html
@@ -153,7 +153,7 @@
                     <div class="text-center mt-4">
                         <p class="text-muted">
                             Already have an account? 
-                            <a href="{{ url_for('user_management.login') }}" class="text-decoration-none">Sign in here</a>
+                            <a href="{{ url_for('auth.user_management.login') }}" class="text-decoration-none">Sign in here</a>
                         </p>
                         <p class="text-muted">
                             <a href="{{ url_for('main.landing') }}" class="text-decoration-none">
