--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -115,6 +115,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('admin.configuration_management') }}">
+                                <i class="bi bi-gear"></i> Configuration
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.health_dashboard') }}">
                                 <i class="bi bi-activity"></i> System Management
                             </a>
